[project]
name = "ons-python-playwright-runner-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Maddaford",email = "ajmaddaford@gmail.com"}
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.60.0,<2.0.0)",
    "pytest-playwright (>=0.8.0,<0.9.0)",
    "sdc-cryptography"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
